add_subdirectory(ComFileKindTest)
add_subdirectory(ComModTestAAF)
add_subdirectory(CreateSequence)
add_subdirectory(EssenceAccess)
# Currently fails: add_subdirectory(MetaModelVerification)
add_subdirectory(MultiGenTest)
add_subdirectory(OpenExistingModify)
add_subdirectory(ResultToTextTest)
add_subdirectory(ScaleTest)
add_subdirectory(UTF8FileNameTest)
add_subdirectory(XMLStoredFormat)
